# sherpi

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.claude/hooks/: block-direct-development.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_analyses.py  35deac28de31_create_missing_tables.py  f2a9c7b1e3d4_create_llm_calls.py
backend/evals/: __init__.py  run.py  tpu_labeled.py  tpu_labeled_set.json
backend/scripts/: export_openapi.py  fetch_tpu_cnj.py  run_tests_sliced.sh  seed_tpu.py
backend/src/sherpi/: __init__.py  config.py
backend/src/sherpi/application/: analyze_petition.py  deanonymize.py  persistence.py
backend/src/sherpi/contexts/document_integrity/application/: analyze.py  ports.py
backend/src/sherpi/contexts/document_integrity/domain/: detector.py  document.py  report.py
backend/src/sherpi/contexts/document_integrity/infrastructure/: dispatching_parser.py  docx_parser.py  pymupdf_parser.py
backend/src/sherpi/contexts/identity/application/: authenticate.py
backend/src/sherpi/contexts/identity/domain/: hasher.py  issuer.py  ports.py  user.py
backend/src/sherpi/contexts/identity/infrastructure/: repository.py
backend/src/sherpi/contexts/integration/application/: ingest_petitions.py
backend/src/sherpi/contexts/integration/domain/: ingestion.py  ports.py  source.py
backend/src/sherpi/contexts/integration/infrastructure/: queue.py  sandbox_adapter.py  sql_job_repository.py
backend/src/sherpi/contexts/petition_analysis/application/: extract.py
backend/src/sherpi/contexts/petition_analysis/domain/: admissibility.py  strategies.py  summary.py
backend/src/sherpi/contexts/review/application/: record_review.py
backend/src/sherpi/contexts/review/domain/: events.py  ports.py
backend/src/sherpi/contexts/review/infrastructure/: repository.py
backend/src/sherpi/contexts/taxonomy/application/: build_index.py  suggest_tpu.py
backend/src/sherpi/contexts/taxonomy/domain/: ports.py  tpu.py
backend/src/sherpi/contexts/taxonomy/infrastructure/: embedding.py  sql_index.py
backend/src/sherpi/infrastructure/: logging.py
backend/src/sherpi/infrastructure/anonymization/: __init__.py  factory.py  presidio.py  regex.py
backend/src/sherpi/infrastructure/llm/: anthropic.py  audit.py  audit_store.py  circuit_breaker.py  factory.py  fake.py  gemini.py  grok.py  http_base.py
backend/src/sherpi/infrastructure/persistence/: engine.py  models.py  repository.py
backend/src/sherpi/interfaces/api/: dependencies.py  main.py  middleware.py
backend/src/sherpi/shared_kernel/: errors.py  events.py  ports.py  value_objects.py
backend/synthetic/: builder.py  entities.py  from_template.py  generate.py  tpu_cnj.py  tpu_seed.py
backend/tests/: test_logging.py
backend/tests/anonymization/: test_anchored_anonymizer.py  test_litisconsorcio_e2e.py  test_mapped_anonymizer.py  test_name_anonymizer.py  test_regex_anonymizer.py
backend/tests/api/: test_analyze_api.py  test_auth_api.py  test_ingestion_api.py  test_retention_api.py
backend/tests/application/: test_analyze_petition.py  test_deanonymize.py
backend/tests/document_integrity/: test_dedup_boilerplate.py  test_detector.py  test_docx_parser.py  test_firewall_integration.py  test_image_only.py  test_parse_deadline.py  test_visible_text.py
backend/tests/identity/: test_authenticate.py
backend/tests/infrastructure/: test_audit_store.py  test_circuit_breaker.py  test_grok_anthropic.py
backend/tests/integration/: test_ingest_petitions.py  test_sandbox_adapter.py
backend/tests/petition_analysis/: test_admissibility.py  test_extract.py  test_normalize_input.py
backend/tests/review/: test_record_review.py
backend/tests/shared_kernel/: test_value_objects.py
backend/tests/synthetic/: test_from_template.py
backend/tests/taxonomy/: test_build_index.py  test_build_tpu_embedder.py  test_hybrid_rerank.py  test_suggest_tpu.py  test_tpu_cnj.py  test_tpu_labeled_set.py
docs/: INDEX.md  agile-process.md  ai-governance.md  backlog.md  c4-model.md  course-syllabus.md  data-model.md  ddd-context-map.md  demo-sprint-review.md  dpia.md  eap.md  glossario-juridico.md  legal-glossary.md  openapi.json  pgp.md  pmp.md  prd-sherpi.md  roadmap.md  security.md  tech-spec-sherpi.md  threat-model.md  wbs.md
docs/adr/: 0001-ddd-hexagonal.md  0002-explicit-orchestrator-vs-langgraph.md  0003-llm-agnostic-via-port.md  0003-llm-agnostico-via-port.md  0004-postgres-pgvector.md  0005-gemini-flash-default.md  0006-docker-apenas-banco.md  0006-docker-db-only.md  0007-auth-jwt-perfil-unico.md  0007-auth-jwt-single-profile.md  0008-multi-domain-architecture.md  0008-multi-dominio-rito-aware.md  0009-knn-numpy-bytes.md  0010-name-masking-regex-vs-ner.md  0011-grok-anthropic-adapters-httpx.md  0012-reversible-anonymization-restore.md  0013-docx-support-native-firewall.md  0014-rito-neutral-extraction-prompt.md  0015-merit-only-claims-extraction.md  0016-cnj-tua-real-catalog-tpu.md  0017-frontend-decoupled-spa.md  INDEX.md
docs/archive/: sherpi-deep-research-v1.md
docs/templates/: 1.1 PETIÇÃO INICIAL - GERAL - contra PESSOA FÍSICA.docx  1.2 PETIÇÃO INICIAL - GERAL - contra PESSOA JURÍDICA.docx  1.3 PETIÇÃO INICIAL - GERAL - contra Órgão GDF - Juizado da Fazenda do DF.docx  2.1 ACIDENTE de TRÂNSITO - UM autor x UM requerido - reparação de danos.docx  2.2 ACIDENTE de TRÂNSITO - UM autor x DOIS requeridos - reparação de danos.docx  2.3 ACIDENTE de TRÂNSITO - DOIS autores x UM requerido - reparação de danos.docx  (+5 more)
frontend/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  playwright.llm.config.ts
scripts/: add_frontmatter.py  convert_doc.py
(+24 files in other folders)
