[project]
name = "sherpi"
version = "0.1.0"
description = "SHERPI — Sistema Híbrido de Extração e Resumo Estruturado de Petições Iniciais"
readme = "README.md"
authors = [{ name = "Marco" }]
requires-python = ">=3.12"
dependencies = [
    # Web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    # Domínio / validação
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "validate-docbr>=1.10",
    "numpy>=2.1",
    # Ingestão de PDF (firewall)
    "pymupdf>=1.24",
    # Persistência
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    # LLM (port + adapters)
    "google-genai>=0.3",
    "openai>=1.54",
    # Resiliência / observabilidade
    "tenacity>=9.0",
    "structlog>=24.4",
    # Auth
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.10",
]

[project.optional-dependencies]
# Stack de ML para a classificação TPU (pesada: puxa torch). Instalar sob demanda:
#   uv sync --extra ml
ml = [
    "sentence-transformers>=3.3",
    "transformers>=4.46",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
    "types-passlib>=1.7",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pymupdf.*",
    "fitz",
    "validate_docbr.*",
    "pgvector.*",
    "sentence_transformers.*",
    "google.*",
]
ignore_missing_imports = true

# Libs sem tipos (PyMuPDF, google-genai). Adapters/ferramentas que as envelopam
# relaxam apenas a proibição de chamadas não-tipadas; o domínio puro permanece strict.
[[tool.mypy.overrides]]
module = [
    "sherpi.contexts.document_integrity.infrastructure.pymupdf_parser",
    "sherpi.infrastructure.llm.gemini",
    "synthetic.*",
]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Torna os pacotes de dev de nível raiz (synthetic, evals) importáveis nos testes.
pythonpath = ["."]
