[project]
name = "sherpi"
version = "0.1.0"
description = "SHERPI — Sistema Híbrido de Extração e Resumo Estruturado de Petições Iniciais"
readme = "README.md"
authors = [{ name = "Marco" }]
requires-python = ">=3.12"
dependencies = [
    # Web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    # Domínio / validação
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "validate-docbr>=1.10",
    "numpy>=2.1",
    # Ingestão de documentos (firewall): PDF via PyMuPDF, DOCX via python-docx
    "pymupdf>=1.24",
    "python-docx>=1.1",
    # Persistência
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    # LLM (port + adapters). Grok (xAI) e Anthropic falam HTTP direto via httpx —
    # sem SDK próprio. Gemini usa o google-genai.
    "google-genai>=0.3",
    # Resiliência / observabilidade
    "tenacity>=9.0",
    "structlog>=24.4",
    "sentry-sdk[fastapi]>=2.0",
    # Auth (bcrypt direto — passlib é incompatível com bcrypt>=5)
    "bcrypt>=4.2",
    "pyjwt>=2.10",
]

[project.optional-dependencies]
# Stack de ML para a classificação TPU (pesada: puxa torch). Instalar sob demanda:
#   uv sync --extra ml
ml = [
    "sentence-transformers>=3.3",
    "transformers>=4.46",
]
# NER de nomes para LGPD pleno (Fase 4). Instalar sob demanda:
#   uv sync --extra ner && python -m spacy download pt_core_news_sm
ner = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# E501 (linha longa) fica a cargo do formatador `ruff format`, que quebra o código
# automaticamente. A regra de lint só sobraria reclamando de strings/URLs que o
# formatador não quebra — ruído sem controle prático. Largura segue em line-length=100.
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pymupdf.*",
    "fitz",
    "validate_docbr.*",
    "sentence_transformers.*",
    "google.*",
    "sentry_sdk.*",
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
    "spacy.*",
]
ignore_missing_imports = true

# Libs sem tipos (PyMuPDF, google-genai). Adapters/ferramentas que as envelopam
# relaxam apenas a proibição de chamadas não-tipadas; o domínio puro permanece strict.
[[tool.mypy.overrides]]
module = [
    "sherpi.contexts.document_integrity.infrastructure.pymupdf_parser",
    "sherpi.contexts.taxonomy.infrastructure.embedding",
    "sherpi.contexts.integration.infrastructure.sandbox_adapter",
    "sherpi.infrastructure.llm.gemini",
    "synthetic.*",
]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Torna os pacotes de dev de nível raiz (synthetic, evals) importáveis nos testes.
pythonpath = ["."]
# Timeout POR TESTE (pytest-timeout): nenhum teste pode pendurar e travar a sessão/WSL.
# 60s é folgado (a maioria roda <1s); método `thread` não exige sinais POSIX.
timeout = 60
timeout_method = "thread"
